--- a/index.html
+++ b/index.html
@@ -393,13 +393,7 @@
     <!-- Logo -->
     <div class="nx-logo">
       <div class="nx-logo-icon">
-        <svg width="24" height="24" viewBox="0 0 250 250" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M132.351 62.5H125.184L117.5 93.75H58.75V187.5H151.184L191.25 147.434V93.75H132.351V62.5Z" fill="transparent" stroke="black" stroke-width="10"/>
-          <circle cx="58.75" cy="140.625" r="15.625" fill="black"/>
-          <circle cx="125" cy="62.5" r="15.625" fill="black"/>
-          <circle cx="125" cy="187.5" r="15.625" fill="black"/>
-          <circle cx="191.25" cy="140.625" r="15.625" fill="black"/>
-        </svg>
+        <img src="images/nexus-logo.png" width="24" height="24" alt="Nexus Commerce Logo">
       </div>
       <div class="nx-logo-text">Nexus Commerce</div>
     </div>
