--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
     <!-- Logo -->
     <div class="nx-logo">
       <div class="nx-logo-icon">
-        <img src="images/nexus-logo.png" width="24" height="24" alt="Nexus Commerce Logo">
+        <img src="images/nexus-logo.png" width="32" height="32" alt="Nexus Commerce Logo" style="max-width: 100%; height: auto;">
       </div>
       <div class="nx-logo-text">Nexus Commerce</div>
     </div>
