--- a/index.html
+++ b/index.html
@@ -709,6 +709,7 @@
 // 2. Update the return link section - replace the setTimeout function in the form submission
 // Find this section in your code and replace it:
 
+// Simulated API call
 setTimeout(function() {
   // Show success message
   document.getElementById("success-text").textContent = 
