--- a/index.html
+++ b/index.html
@@ -710,15 +710,64 @@
 // Find this section in your code and replace it:
 
 // Simulated API call
-setTimeout(function() {
-  // Show success message
+// First validate form fields
+let isValid = true;
+let errorMessage = "";
+
+// Basic validation
+if (!storeUrl) {
+  isValid = false;
+  errorMessage = "Please enter your store URL";
+} else if (authType === 'api' && (!credentials.apiKey || !credentials.apiSecret)) {
+  isValid = false;
+  errorMessage = "Please enter both API Key and API Password";
+} else if (authType === 'admin' && (!credentials.email || !credentials.password)) {
+  isValid = false;
+  errorMessage = "Please enter both Email and Password";
+}
+
+if (!document.getElementById("terms").checked) {
+  isValid = false;
+  errorMessage = "Please accept the terms to continue";
+}
+
+if (!isValid) {
+  alert(errorMessage);
+  button.textContent = originalText;
+  button.disabled = false;
+  return;
+}
+
+// Make the actual API call
+fetch('https://2qqns62uhf.execute-api.us-east-2.amazonaws.com/Deploy/credentials', {
+  method: 'POST',
+  headers: {
+    'Content-Type': 'application/json',
+  },
+  body: JSON.stringify({
+    customerId: params.customerId,
+    platform: 'shopify',
+    storeUrl: storeUrl,
+    credentials: credentials,
+    metadata: {
+      submittedAt: new Date().toISOString(),
+      referrerUrl: params.returnUrl || 'direct'
+    }
+  })
+})
+.then(response => {
+  if (!response.ok) {
+    return response.json().then(data => {
+      throw new Error(data.error || 'Failed to store credentials');
+    });
+  }
+  return response.json();
+})
+.then(data => {
+  // Success handling - only show success after confirmation
   document.getElementById("success-text").textContent = 
     "Your Shopify credentials have been securely stored.";
   document.getElementById("success-message").style.display = "flex";
-  
-  // Reset button
-  button.textContent = originalText;
-  button.disabled = false;
   
   // Clear sensitive fields
   if (authType === 'api') {
@@ -743,39 +792,23 @@ setTimeout(function() {
   } else {
     document.getElementById("return-link").style.display = "block";
   }
-  
-  // Send data to API with customerId
-  fetch('https://2qqns62uhf.execute-api.us-east-2.amazonaws.com/Deploy/credentials', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json',
-    },
-    body: JSON.stringify({
-      customerId: params.customerId,
-      platform: 'shopify',
-      storeUrl: storeUrl,
-      credentials: credentials,
-      metadata: {
-        submittedAt: new Date().toISOString(),
-        referrerUrl: params.returnUrl || 'direct'
-      }
-    })
-  }).then(response => {
-    if (!response.ok) throw new Error('Failed to store credentials');
-    return response.json();
-  }).then(data => {
-    // Success already handled above
-    console.log('Credentials stored successfully');
-  }).catch(error => {
-    // Error handling
-    console.error('Error:', error);
-    document.getElementById("success-text").textContent = 
-      "Error storing credentials: " + error.message;
-    document.getElementById("success-message").style.backgroundColor = "rgba(239, 68, 68, 0.1)";
-    document.getElementById("success-message").style.borderColor = "rgba(239, 68, 68, 0.2)";
-  });
-  
-}, 1500);
+
+  console.log('Credentials stored successfully');
+})
+.catch(error => {
+  // Error handling
+  console.error('Error:', error);
+  document.getElementById("success-text").textContent = 
+    "Error storing credentials: " + error.message;
+  document.getElementById("success-message").style.backgroundColor = "rgba(239, 68, 68, 0.1)";
+  document.getElementById("success-message").style.borderColor = "rgba(239, 68, 68, 0.2)";
+  document.getElementById("success-message").style.display = "flex";
+})
+.finally(() => {
+  // Reset button whether success or failure
+  button.textContent = originalText;
+  button.disabled = false;
+});
     });
   </script>
 </body>
